tf-project/routing_tables.tf
resource "aws_route_table" "private" {
  vpc_id = aws_vpc.tf_project_vpc.id
  route {
    cidr_block     = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.project-nat.id
  }
  tags = {
    Name = "tf-rt-private"
  }
}

resource "aws_route_table" "public" {
  vpc_id = aws_vpc.tf_project_vpc.id
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.project-igw.id
  }
  tags = {
    Name = "tf-rt-public"
  }
}

resource "aws_route_table_association" "private-us-east-1a" {
  subnet_id      = aws_subnet.tf-private-us-east-1a.id
  route_table_id = aws_route_table.private.id
}

resource "aws_route_table_association" "private-us-east-1b" {
  subnet_id      = aws_subnet.tf-private-us-east-1b.id
  route_table_id = aws_route_table.private.id
}
resource "aws_route_table_association" "public-us-east-1a" {
  subnet_id      = aws_subnet.tf-public-us-east-1a.id
  route_table_id = aws_route_table.public.id
}

resource "aws_route_table_association" "public-us-east-1b" {
  subnet_id      = aws_subnet.tf-public-us-east-1b.id
  route_table_id = aws_route_table.public.id
}
